# RoMa

./: .gitignore  LICENSE  README.md  ceratinity.py  dissimilar.py  index.html  pyproject.toml  requirements.txt  requirements_inf.txt  setup.py
.github/workflows/: build.yml  publish.yml
demo/: demo_3D_effect.py  demo_fundamental.py  demo_match.py  demo_match_kpts.py  demo_match_opencv_sift.py  demo_match_tiny.py
experiments/: eval_roma_outdoor.py  eval_tiny_roma_v1_outdoor.py  roma_indoor.py  roma_outdoor.py  train_roma_outdoor.py  train_tiny_roma_v1_outdoor.py
experiments/tiny_roma_dev/: tiny_roma_outdoor_v10.py  tiny_roma_outdoor_v13.py  tiny_roma_outdoor_v14.py  tiny_roma_outdoor_v15.py  tiny_roma_outdoor_v16.py  tiny_roma_outdoor_v2.py  tiny_roma_outdoor_v20.py  tiny_roma_outdoor_v20_broken.py  tiny_roma_outdoor_v21.py  tiny_roma_outdoor_v24.py  tiny_roma_outdoor_v25.py  tiny_roma_outdoor_v26.py  tiny_roma_outdoor_v27.py  tiny_roma_outdoor_v28.py  tiny_roma_outdoor_v29.py  tiny_roma_outdoor_v3.py  tiny_roma_outdoor_v30.py  tiny_roma_outdoor_v31.py  tiny_roma_outdoor_v32.py  tiny_roma_outdoor_v33.py  tiny_roma_outdoor_v34.py  tiny_roma_outdoor_v35.py  tiny_roma_outdoor_v36.py  tiny_roma_outdoor_v37.py  tiny_roma_outdoor_v38.py  tiny_roma_outdoor_v39.py  tiny_roma_outdoor_v4.py  tiny_roma_outdoor_v40.py  (+8 more)
roma/: __init__.py
romatch/: __init__.py
tests/: smoke_test.py  test_match_modes.py  test_mega1500.py  test_mega1500_poselib.py  test_mega_dense.py  test_roma_coarse_inference_time.py  test_roma_coarse_inference_time_cpu.py  test_roma_inference_time.py  test_roma_upsample_inference_time.py
(+68 files in other folders)
